--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0",
     "vue3-autocounter": "^1.0.8"
   },
   "devDependencies": {
